# manifest-compiler

./: .gitignore  README.md  compile_csv.py  compile_entity_table.py  compile_image_table.py  compile_manifests.py  compiler.py  hello.py  manifester.py  pyproject.toml
manifests/: m1.json
src/compiler/: __init__.py  models.py
templates/: artifact.html
tests/: test_db.py  test_entity.py
tests/data/: artifacts.ttl  images.ttl  test_rdf.ttl
webpages/: sample.html
