[project]
name = "manifester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iiif-prezi3>=2.0.0",
    "ipykernel>=6.29.5",
    "rdflib>=7.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
    "ruff>=0.8.4",
]
