[project]
name = "manifest-compiler"
version = "0.1.0"
description = "code to compile Perseus CRM into IIIF manifests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iiif-prezi3>=2.0.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "rdflib>=7.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
    "ruff>=0.8.4",
]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[pytest]
pythonpath = 'src'