[project]
name = "manifest-compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "iiif-prezi3>=2.0.0",
    "jinja2>=3.1.5",
    "rdflib>=7.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
]
